correct the signup to be 100% wide with some css voodoo https://stackoverflow.com/questions/11723417/break-element-out-of-container

--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -1,6 +1,7 @@
 body {
     font-size: 17px;
     line-height: 1.5;
+    overflow-x: hidden;
 }
 
 .header {
@@ -186,17 +187,15 @@ article tr:nth-child(even) {
     color: white;
 }
 
+#mc_embed_signup {
+    margin-right: -50%;
+    padding-right: 50%;
+
+    margin-left: -50%;
+    padding-left: 50%;
+}
+
 @media only screen and (min-width: 1000px) {
-    #mc_embed_signup {
-        left: -50%;
-        margin-right: -50%;
-        padding-right: 50%;
-
-        right: -50%;
-        margin-left: -50%;
-        padding-left: 50%;
-    }
-
     #mc_embed_signup input.email {
         width: 35%;
         min-width: 150px
@@ -204,20 +203,12 @@ article tr:nth-child(even) {
 }
 
 @media only screen and (max-width: 1000px) {
-    #mc_embed_signup {
-        padding: 0.5em;
-    }
-
     #mc_embed_signup input.email {
         width: 50%;
     }
 }
 
 @media only screen and (max-width: 500px) {
-    #mc_embed_signup {
-        padding: 0.5em;
-    }
-
     #mc_embed_signup input.email {
         width: 100%;
     }
